--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Abi</h1>
+    <h1>Selam</h1>
     <script src="index.js"></script>
 </body>
 </html>
