--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Selam</h1>
-    <script src="index.js"></script>
+    <!-- <img src="img/images.jpg" alt="" class="h-full"> -->
+    <script src="app.js"></script>
 </body>
 </html>
